fixed connect on mobile too much padding

--- a/sass/__contact.scss
+++ b/sass/__contact.scss
@@ -94,7 +94,7 @@
 
 
 
-@media screen and (max-width:1000px) {
+@media screen and (max-width:1000px) and (min-width: 769px) {
     .wrapper {
         flex-direction: column;
     }
@@ -107,6 +107,27 @@
     }
     .form-wrapper {
         width: 95%;
+        margin-top: 3rem;
+        input {
+            width: 100%;
+        }
+    }
+}
+
+@media screen and (max-width:768px) {
+    .wrapper {
+        flex-direction: column;
+        padding: 0;
+    }
+    .address {
+        width: 100%;
+    }
+    .details{
+        width: 100%;
+        font-size: 1rem;
+    }
+    .form-wrapper {
+        width: 100%;
         margin-top: 3rem;
         input {
             width: 100%;
